name:                NonEmptyMap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChristopherDavenport/NonEmptyMap#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher Davenport
maintainer:          Chris@ChristopherDavenport.tech
copyright:           2018 Christopher Davenport
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChristopherDavenport/NonEmptyMap
